--- a/INIntents4iOS16/ja.lproj/PZProfileIntentBackports.strings
+++ b/INIntents4iOS16/ja.lproj/PZProfileIntentBackports.strings
@@ -1,59 +1,138 @@
-/* ja.lproj/Localizable.strings */
-
 /* appEntity_ */
 "appEntity_localProfile" = "プロファイル";
+
+/* (No Comment) */
 "appEntity_widgetBackground" = "ウィジェットの背景画像";
 
 /* appEnum_ */
 "appEnum_ExpeditionDisplayPolicy_displayExclusively" = "独占表示する";
+
+/* (No Comment) */
 "appEnum_ExpeditionDisplayPolicy_displayWhenAvailable" = "利用可能な情報を表示";
+
+/* (No Comment) */
 "appEnum_ExpeditionDisplayPolicy_neverDisplay" = "表示せず";
+
+/* (No Comment) */
 "appEnum_ExpeditionDisplayPolicy_title" = "派遣依頼の表示の方針";
+
+/* (No Comment) */
 "appEnum_StaminaContentRevolverStyle_asRoundMeter" = "円形計器";
-"appEnum_StaminaContentRevolverStyle_asTimeStampWhenWillAccomplish" = "任務完成の時点";
+
+/* (No Comment) */
 "appEnum_StaminaContentRevolverStyle_asTimerCountDown" = "減算時計";
+
+/* (No Comment) */
+"appEnum_StaminaContentRevolverStyle_asTimeStampWhenWillAccomplish" = "任務完成の時点";
+
+/* (No Comment) */
 "appEnum_StaminaContentRevolverStyle_byDefault" = "デフォルト値";
+
+/* (No Comment) */
 "appEnum_StaminaContentRevolverStyle_title" = "任意のスタミナ表示スタイルを用いる";
+
+/* (No Comment) */
 "appEnum_WeeklyBossesDisplayMethod_alwaysHidden" = "常に隠す";
+
+/* (No Comment) */
 "appEnum_WeeklyBossesDisplayMethod_alwaysVisible" = "常に見えるようにする";
+
+/* (No Comment) */
 "appEnum_WeeklyBossesDisplayMethod_hiddenIfAllCompleted" = "隠す(全部完了の場合のみ)";
+
+/* (No Comment) */
 "appEnum_WeeklyBossesDisplayMethod_title" = "週ボス情報の表示方法";
-"appEnum_WidgetSupportedGame_GI" = "原神";
-"appEnum_WidgetSupportedGame_HSR" = "スターレイル";
-"appEnum_WidgetSupportedGame_ZZZ" = "ゼンレスゾンゼロ";
+
+/* (No Comment) */
 "appEnum_WidgetSupportedGame_allGames" = "全てのゲーム";
+
+/* (No Comment) */
+"appEnum_WidgetSupportedGame_GI" = "原神";
+
+/* (No Comment) */
+"appEnum_WidgetSupportedGame_HSR" = "スターレイル";
+
+/* (No Comment) */
 "appEnum_WidgetSupportedGame_title" = "サポートされているゲーム";
+
+/* (No Comment) */
+"appEnum_WidgetSupportedGame_ZZZ" = "ゼンレスゾンゼロ";
+
+/* intent_bool_ */
+"intent_bool_false" = "いいえ";
+
+/* (No Comment) */
+"intent_bool_true" = "はい";
 
 /* intent_description_ */
 "intent_description_chooseTheGame" = "ゲームをご指定";
-"intent_description_pickTheLocalProfileDuoForThisWidget" = "該当ウィジェットのための2つのプロファイルのご指定を";
-"intent_description_pickTheLocalProfileForThisWidget" = "該当ウィジェットのためのプロファイルのご指定を";
+
+/* (No Comment) */
+"intent_description_pickTheLocalProfileDuoForThisWidget" = "このウィジェットに2つのプロファイルのご指定を";
+
+/* (No Comment) */
+"intent_description_pickTheLocalProfileForThisWidget" = "このウィジェットにプロファイルのご指定を";
 
 /* intent_field_ */
 "intent_field_echoOfWarDisplayMethod" = "[星鉄] 歴戦余韻の残った回数を表示する";
+
+/* (No Comment) */
 "intent_field_expeditionDisplayPolicy" = "派遣依頼の表示の方針";
+
+/* (No Comment) */
 "intent_field_followSystemDarkMode" = "システムの外観モードに沿う";
+
+/* (No Comment) */
 "intent_field_game" = "ゲーム";
+
+/* (No Comment) */
 "intent_field_inverseSelectMode" = "選択を反転する";
+
+/* (No Comment) */
 "intent_field_localProfile" = "プロファイル";
+
+/* (No Comment) */
 "intent_field_localProfile_slot1" = "プロファイル #1";
+
+/* (No Comment) */
 "intent_field_localProfile_slot2" = "プロファイル #2";
+
+/* (No Comment) */
 "intent_field_showMaterialsInLargeSizeWidget" = "[原神] 毎日の材料情報を表示する (最大寸法のウィジェットのみ)";
+
+/* (No Comment) */
 "intent_field_showStaminaOnly" = "スタミナだけを表示する";
+
+/* (No Comment) */
 "intent_field_showTransformer" = "[原神] 参量物質変化器の状態を表示する";
+
+/* (No Comment) */
 "intent_field_staminaDisplayStyle" = "スタミナの表示スタイル（天然樹脂・開拓力・ZZZバッテリー）";
+
+/* (No Comment) */
 "intent_field_trounceBlossomDisplayMethod" = "[原神] 征討の花の樹脂値引きを表示する";
+
+/* (No Comment) */
 "intent_field_useRandomWallpaper" = "任意の壁紙を用いる";
-"intent_field_useTinyGlassDisplayStyle" = "袖珍硝子表示スタイル";
+
+/* (No Comment) */
+"intent_field_useTinyGlassDisplayStyle" = "ミニガラス表示スタイル";
+
+/* (No Comment) */
 "intent_field_wallpaper" = "壁紙";
 
 /* intent_name_ */
 "intent_name_selectGameOnly" = "ゲームのみをご指定";
+
+/* (No Comment) */
 "intent_name_selectLocalProfile" = "プロファイルをご指定";
+
+/* (No Comment) */
 "intent_name_selectLocalProfile4Peripherals" = "プロファイルだけをご指定";
+
+/* (No Comment) */
 "intent_name_selectLocalProfile4PeripheralsWithExtraConfig" = "プロファイルのご指定且つ追加設定";
+
+/* (No Comment) */
 "intent_name_selectLocalProfileDuo" = "2つのプロファイルをご指定";
 
-/* intent_bool_ */
-"intent_bool_false" = "いいえ";
-"intent_bool_true" = "はい";
