--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -8353,7 +8353,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ローカルプロファイル"
+            "value" : "プロファイル"
           }
         },
         "ko" : {
@@ -8505,7 +8505,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "現在ご利用中のデバイスのシステムバージョンは OS24（iOS 17 / macOS 14 / watchOS 10）未満のため、『ピザ助手(無印)』の現行サービス対象外となります。\n\n『原神ピザ助手』v4 までの二人の主要開発者は、それぞれのキャリアプランの都合で 2024 年に開発から離脱し、『崩スタピザ助手』の開発も中止されました。残った開発者が二つのアプリの保守を一人で担うのは過重であったため、両者を統合する「統一ピザエンジン」の開発を開始しました。これが 2024 年 11 月中旬から実装された『ピザ助手(無印)』v5 です。\n\n旧バージョンのシステムに組み込まれている SwiftUI フレームワークには、保守効率に大きく影響する多くの欠陥があるため、「統一ピザエンジン」では OS24（iOS 17、macOS 14、watchOS 10）を主なターゲットとする開発方針を採用しました。この世代で導入された Observable Macro フレームワークにより、フロントエンドはより細かなバックエンド情報の変化に素早く正確に対応できるようになり、旧来の Combine ベースの技術のように画面全体を一度に再描画することがなくなりました。旧技術では画面更新の遅延などの問題も発生し、ユーザー体験や開発体験を損なっていました。さらに OS24 で導入された SwiftData は、CoreData の長年のスレッド並行安全性問題を解決しています。「統一ピザエンジン」の開発全体を通じて Swift の最新の並行処理技術が活用されています。\n\n『原神ピザ助手』は v2.5.0 から「深境螺旋ランキング」（および関連する個人作戦報告アップロード機能）を OS21（iOS 14、macOS 11、watchOS 8）でサポートしていました。2024 年末に『ピザ助手(無印)』v5 が実装された後、様々な配慮により、「データ不収集」方針が採用され、2025 年夏には原神向け「深境螺旋ランキング」機能と個人作戦報告アップロード機能が削除されました。しかし、OS24 へアップグレードできない既存ユーザーにとっては重大な情報セキュリティリスクが残ります。ランキング専用サーバーの契約終了後も、旧バージョンのアプリがデータをアップロードし続ける可能性があり、そのサーバーの IP が新たな所有者の手に渡った場合、制御不能な情報流出リスクとなります。\n\nこの状況に対応するため、三人の開発者は『ピザ助手(無印)』v5 を OS21（iOS 14 など）向けにもビルドすることで合意しましたが、OS24 未満のシステムでは旧バージョンのローカルプロファイル（旧称「ローカルアカウント」）データやガチャ履歴の書き出しのみを提供し、ユーザーが新しいデバイス（OS24 以降）で読み込めるようにします。\n\n『ピザ助手(無印)』v5 はデータ損失のリスクを冒してまで SwiftData を CoreData へダウングレードできないため、OS24 未満のシステムへのサポートは継続できません。FOSS（フリー・オープンソース・ソフトウェア）は無限の利用可能性や責任を意味しません。ご理解のほど、よろしくお願いいたします。"
+            "value" : "現在ご利用中のデバイスのシステムバージョンは OS24（iOS 17 / macOS 14 / watchOS 10）未満のため、『ピザ助手(無印)』の現行サービス対象外となります。\n\n『原神ピザ助手』v4 までの二人の主要開発者は、それぞれのキャリアプランの都合で 2024 年に開発から離脱し、『崩スタピザ助手』の開発も中止されました。残った開発者が二つのアプリの保守を一人で担うのは過重であったため、両者を統合する「統一ピザエンジン」の開発を開始しました。これが 2024 年 11 月中旬から実装された『ピザ助手(無印)』v5 です。\n\n旧バージョンのシステムに組み込まれている SwiftUI フレームワークには、保守効率に大きく影響する多くの欠陥があるため、「統一ピザエンジン」では OS24（iOS 17、macOS 14、watchOS 10）を主なターゲットとする開発方針を採用しました。この世代で導入された Observable Macro フレームワークにより、フロントエンドはより細かなバックエンド情報の変化に素早く正確に対応できるようになり、旧来の Combine ベースの技術のように画面全体を一度に再描画することがなくなりました。旧技術では画面更新の遅延などの問題も発生し、ユーザー体験や開発体験を損なっていました。さらに OS24 で導入された SwiftData は、CoreData の長年のスレッド並行安全性問題を解決しています。「統一ピザエンジン」の開発全体を通じて Swift の最新の並行処理技術が活用されています。\n\n『原神ピザ助手』は v2.5.0 から「深境螺旋ランキング」（および関連する個人作戦報告アップロード機能）を OS21（iOS 14、macOS 11、watchOS 8）でサポートしていました。2024 年末に『ピザ助手(無印)』v5 が実装された後、様々な配慮により、「データ不収集」方針が採用され、2025 年夏には原神向け「深境螺旋ランキング」機能と個人作戦報告アップロード機能が削除されました。しかし、OS24 へアップグレードできない既存ユーザーにとっては重大な情報セキュリティリスクが残ります。ランキング専用サーバーの契約終了後も、旧バージョンのアプリがデータをアップロードし続ける可能性があり、そのサーバーの IP が新たな所有者の手に渡った場合、制御不能な情報流出リスクとなります。\n\nこの状況に対応するため、三人の開発者は『ピザ助手(無印)』v5 を OS21（iOS 14 など）向けにもビルドすることで合意しましたが、OS24 未満のシステムでは旧バージョンのプロファイル（旧称「ローカルアカウント」）データやガチャ履歴の書き出しのみを提供し、ユーザーが新しいデバイス（OS24 以降）で読み込めるようにします。\n\n『ピザ助手(無印)』v5 はデータ損失のリスクを冒してまで SwiftData を CoreData へダウングレードできないため、OS24 未満のシステムへのサポートは継続できません。FOSS（フリー・オープンソース・ソフトウェア）は無限の利用可能性や責任を意味しません。ご理解のほど、よろしくお願いいたします。"
           }
         },
         "ko" : {
@@ -8581,7 +8581,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "iOS 16.2・macOS 13 ではウィジェットのみ利用可能です。他の機能は iOS 17 / macOS 14 以降が必要です。ローカルプロファイルマネージャーのナビゲーション操作中に不具合が発生した場合、それは iOS 16 / macOS 13 の SwiftUI 関連バグが原因であり、唯一の解決策は iOS 17 / macOS 14 へのアップグレードです。"
+            "value" : "iOS 16.2・macOS 13 ではウィジェットのみ利用可能です。他の機能は iOS 17 / macOS 14 以降が必要です。プロファイルマネージャーのナビゲーション操作中に不具合が発生した場合、それは iOS 16 / macOS 13 の SwiftUI 関連バグが原因であり、唯一の解決策は iOS 17 / macOS 14 へのアップグレードです。"
           }
         },
         "ko" : {
@@ -10338,7 +10338,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "敝アプリまたはその付属のウィジェットは、特定のローカルプロファイルに対するリアルタイム便箋情報を取得する際に、そのプロファイルに関する通知を自動で再予定しようとします。該当プロファイルの新しい通知を予定するたびに、以前に（そのプロファイルのために）予定された不適切な未送信通知があれば、それらを自動的に削除しようとします。通知は、システム設定が本アプリの通知送信を許可しており、さらに本アプリがリアルタイム便箋情報の取得に成功した場合に限り、関連の通知設定が許可されている状況でのみ予定されます。"
+            "value" : "敝アプリまたはその付属のウィジェットは、特定のプロファイルに対するリアルタイム便箋情報を取得する際に、そのプロファイルに関する通知を自動で再予定しようとします。該当プロファイルの新しい通知を予定するたびに、以前に（そのプロファイルのために）予定された不適切な未送信通知があれば、それらを自動的に削除しようとします。通知は、システム設定が本アプリの通知送信を許可しており、さらに本アプリがリアルタイム便箋情報の取得に成功した場合に限り、関連の通知設定が許可されている状況でのみ予定されます。"
           }
         },
         "ko" : {
@@ -13608,7 +13608,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "重複のローカルプロファイルを自動的に排除"
+            "value" : "重複のプロファイルを自動的に排除"
           }
         },
         "ko" : {
@@ -13684,7 +13684,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "⚠️ 開発者から技術的なサポートを求めている間に行うように指示されない限り、この切り替えボタンを触らないでください。\n\n⚠️ この切り替えボタンを触る前に、ローカルのプロファイルをお書き出しください。"
+            "value" : "⚠️ 開発者から技術的なサポートを求めている間に行うように指示されない限り、この切り替えボタンを触らないでください。\n\n⚠️ この切り替えボタンを触る前に、該当端末からプロファイルをお書き出しください。"
           }
         },
         "ko" : {
@@ -13836,7 +13836,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ローカルプロファイルのストレージ場所"
+            "value" : "プロファイルのストレージ場所"
           }
         },
         "ko" : {
@@ -14140,7 +14140,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "米遊社が管理するUID用に設定されたローカルプロファイルは、一貫した識別を確保するために同じ端末指紋（x-rpc-device_fp）を使用することが推奨されます。「端末指紋を一括適用する」ボタンをクリックして、すべてのそのようなローカルプロファイルに同じ端末指紋を適用します。"
+            "value" : "米遊社が管理するUIDのために設定されたプロファイルは、一貫した識別を確保するために同じ端末指紋（x-rpc-device_fp）を使用することが推奨されます。「端末指紋を一括適用する」ボタンをクリックして、すべてのそのようなプロファイルに同じ端末指紋を適用します。"
           }
         },
         "ko" : {
