--- a/SharedBundles/Settings.bundle/ja.lproj/Settings.strings
+++ b/SharedBundles/Settings.bundle/ja.lproj/Settings.strings
@@ -1,7 +1,9 @@
 /* A single strings file, whose title is specified in your preferences schema. The strings files provide the localized content to display to the user for each of your preferences. */
-
 "⚠️If you don't see the \"Preferred language\" option here" = "⚠️もし、お好みの言語はここで陳列されていない場合";
 
+/* (No Comment) */
+"🌐 Supported Languages" = "🌐このアプリの表示できる言語";
+
+/* (No Comment) */
 "Please go to 📱 [Settings] -> [General] -> [Language & Region] and add the language you wish to set as the second language. " = "この📱の [設定] -> [一般] -> [言語と地域] でお好みの言語をご追加ください。 ";
 
-"🌐 Supported Languages" = "🌐このアプリの表示できる言語";
