--- a/Packages/EnkaKit/Sources/EnkaKit/Resources/Localizable.xcstrings
+++ b/Packages/EnkaKit/Sources/EnkaKit/Resources/Localizable.xcstrings
@@ -575,7 +575,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "これらの画像は弊アプリで効かぬ場合はございます。なお：弊アプリで使用していた「原神のキャラ写真スタイルに基づいたキャラ写真」素材は、**情報漏洩者からの素材でなく**、「[MiHoYo公式提供したミクミクダンス用モデル](https://www.aplaybox.com/u/516827875)」や[その他の公開リソース](https://www.aplaybox.com/u/106842826)を使って作ったものである。"
+            "value" : "これらの画像は当アプリで効かない場合はございます。なお：当アプリで使用していた「原神のキャラ写真スタイルに基づいたキャラ写真」素材は、**情報漏洩者からの素材でなく**、「[MiHoYo公式提供したミクミクダンス用モデル](https://www.aplaybox.com/u/516827875)」や[その他の公開リソース](https://www.aplaybox.com/u/106842826)を使って作ったものである。"
           }
         },
         "ko" : {
@@ -729,7 +729,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "弊アプリ内の「崩壊：スターレイル」キャラクターの画像の背景紋様は、キャラクターの「運命の途」と「元素能力属性」両方を示します。「元素能力属性」は紋様の色彩で表現します。"
+            "value" : "当アプリ内の「崩壊：スターレイル」キャラクターの画像の背景紋様は、キャラクターの「運命の途」と「元素能力属性」両方を示します。「元素能力属性」は紋様の色彩で表現します。"
           }
         },
         "ko" : {
@@ -2808,7 +2808,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当端末での EnkaDB 資料の状況"
+            "value" : "この端末での EnkaDB 資料の状況"
           }
         },
         "ko" : {
