--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -1429,7 +1429,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "⚠︎ UIGF v2.3 そそれ以前の規格に準じて書き出した JSON・XLSX ファイルには時間帯情報は欠けており、それを書き出したそれぞれのアプリの各自の時間帯情報処理手順はそれぞれです。\n - 「Snap.HuTao」アプリの古いバージョン (v1.7.16_2023-11-10 まで) から書き出した（これらの廃止規格に準じた）ファイルを読み込む場合、時間帯を「UTC+0」と設置してください。\n - 「Xunkong」の古いバージョン (v1.4.4_2024-04-24 まで) から書き出した（これらの廃止規格に準じた）ファイルを読み込む場合、時間帯の設定をサーバーの時間帯と一致してください。「Xunkong」は UIGF v2.4 をサッポートをしたことはなくて、v1.5.0 版 (2024-09-21) にてガチャ時間帯のサポートと共に UIGF v3.0 のサポートも実装しました。\n - 「Teyvat Helper (YShelper；テイワット小助手)」アプリから書き出した（これらの廃止規格に準じた）ファイルを読み込む場合、該当ファイルを書き出した端末のあの時点の時間帯と設置してください。"
+            "value" : "⚠︎ UIGF v2.3 そそれ以前の規格に準じて書き出した JSON・XLSX ファイルには時間帯情報は欠けており、それを書き出したそれぞれのアプリの各自の時間帯情報処理手順はそれぞれです。\n - 「Snap.HuTao」アプリの古いバージョン (v1.7.16_2023-11-10 まで) から書き出した（これらの廃止規格に準じた）ファイルを読み込む場合、時間帯を「UTC+0」と設置してください。\n - 「Xunkong」の古いバージョン (v1.4.4_2024-04-24 まで) から書き出した（これらの廃止規格に準じた）ファイルを読み込む場合、時間帯の設定をサーバーの時間帯と一致してください。「Xunkong」は UIGF v2.4 をサッポートをしたことはなくて、v1.5.0 版 (2024-09-21) にてガチャ時間帯のサポートと共に UIGF v3.0 のサポートも実装しました。\n - 「Teyvat Helper (YShelper；テイワット小助手)」アプリから書き出した（これらの廃止規格に準じた）ファイルを読み込む場合、このファイルを書き出した端末のあの時点の時間帯と設置してください。"
           }
         },
         "ko" : {
@@ -2813,7 +2813,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当ファイルのアクセスにはさらなる権限が必要である。"
+            "value" : "このファイルのアクセスにはさらなる権限が必要である。"
           }
         },
         "ko" : {
@@ -3891,7 +3891,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "弊アプリには有料ガチャは含まれておりません。このガチャ記録管理機能は、弊アプリのサポート対象としている一部のゲームにおいてユーザーが自分のガチャ記録を管理することのみが可能です。貴殿のガチャ記録は、該当端末のログインしている Apple ID の iCloud ストレージ内、そしてその Apple ID のサインイン状態中（且つ弊アプリを実装してお用いしていた）Apple デバイスにのみ保存されておりますので、プライバシー上のご配慮は要りません。「ゼンレスゾーンゼロ（絶区ゼロ）」は現時点で弊アプリのこの機能のサポート対象外です。"
+            "value" : "当アプリには有料ガチャは含まれておりません。このガチャ記録管理機能は、当アプリのサポート対象としている一部のゲームにおいてユーザーが自分のガチャ記録を管理することのみが可能です。貴殿のガチャ記録は、この端末のログインしている Apple ID の iCloud ストレージ内、そしてその Apple ID のサインイン状態中（且つ当アプリを実装してお用いしていた）Apple デバイスにのみ保存されておりますので、プライバシー上のご配慮は要りません。「ゼンレスゾーンゼロ（絶区ゼロ）」は現時点で当アプリのこの機能のサポート対象外です。"
           }
         },
         "ko" : {
@@ -5807,7 +5807,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "公式のガチャ記録を提供するサーバーで実際に何が起こったかは、弊アプリの開発チームとして断言することではございませんので、以下の説明は、観察に基づく推測です。サーバー側の偶発的な問題が起こる可能性により、ゲームサーバーから送り返されるガチャ記録データが重複したり、取扱番号に誤りがあったりする可能性があります。この結果、端末内のデータベースが汚染される可能性があります。「異常なる既存データを掃除する」スイッチがONの場合、このアプリは最新のガチャ記録を基準として、端末内のデータベースの取扱番号が正しいかどうかを点検し、誤ったデータを排除しようとします。しかし、この汚染現象により、点検中の判断が誤る可能性があります。いずれにせよ、ゲームのサービスが終了する時点で、サービス期間中のすべてのガチャ記録は、おそらくサーバー側で確定し、信頼できる結果となるでしょう。"
+            "value" : "公式のガチャ記録を提供するサーバーで実際に何が起こったかは、当アプリの開発チームとして断言することではございませんので、以下の説明は、観察に基づく推測です。サーバー側の偶発的な問題が起こる可能性により、ゲームサーバーから送り返されるガチャ記録データが重複したり、取扱番号に誤りがあったりする可能性があります。この結果、端末内のデータベースが汚染される可能性があります。「異常なる既存データを掃除する」スイッチがONの場合、このアプリは最新のガチャ記録を基準として、端末内のデータベースの取扱番号が正しいかどうかを点検し、誤ったデータを排除しようとします。しかし、この汚染現象により、点検中の判断が誤る可能性があります。いずれにせよ、ゲームのサービスが終了する時点で、サービス期間中のすべてのガチャ記録は、おそらくサーバー側で確定し、信頼できる結果となるでしょう。"
           }
         },
         "ko" : {
@@ -6498,7 +6498,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "GachaMetaDB は、（該当端末での）弊アプリのガチャ記録データベースや外部ソースからの特定のガチャ部品記録の処理において古くなり、ガチャ記録の交換などのお役に立てられません。このデータベースには、ItemID とその（諸言語の）名称をお互いに参照するための重要な情報が含まれており、各ガチャ部品の稀有度情報も載っております。"
+            "value" : "GachaMetaDB は、（この端末での）当アプリのガチャ記録データベースや外部ソースからの特定のガチャ部品記録の処理において古くなり、ガチャ記録の交換などのお役に立てられません。このデータベースには、ItemID とその（諸言語の）名称をお互いに参照するための重要な情報が含まれており、各ガチャ部品の稀有度情報も載っております。"
           }
         },
         "ko" : {
@@ -6729,7 +6729,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "タップして該当ガチャプロファイルの全ての記録を削除"
+            "value" : "タップしてこのガチャプロファイルの全ての記録を削除"
           }
         },
         "ko" : {
@@ -6806,7 +6806,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当ガチャプロファイルの全ての記録を削除する。続行するかどうかのご確認を。"
+            "value" : "このガチャプロファイルの全ての記録を削除する。続行するかどうかのご確認を。"
           }
         },
         "ko" : {
@@ -6883,7 +6883,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当ゲーム"
+            "value" : "このゲーム"
           }
         },
         "ko" : {
@@ -7422,7 +7422,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "[ParseGachaURLError] サーバー情報は使えぬ。"
+            "value" : "[ParseGachaURLError] サーバー情報は使えません。"
           }
         },
         "ko" : {
@@ -7499,7 +7499,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "[ParseGachaURLError] 該当URLは使えぬ。"
+            "value" : "[ParseGachaURLError] このURLは使えません。"
           }
         },
         "ko" : {
