--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
@@ -42,7 +42,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "弊アプリは次のFOSSコンポーネントと他者 API を使用しており、それらの作成者に感謝します。"
+            "value" : "当アプリは次のFOSSコンポーネントと他者 API を使用しており、それらの作成者に感謝します。"
           }
         },
         "ko" : {
@@ -3078,7 +3078,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "弊アプリの主要言語は、英語、繁体字中国語、簡体字中国語、日本語です。他の言語は補助的な言語であり、開発チームのメンバーは理解または使用できません。これらの言語には、ChatGPT で翻訳の下書きを作成していますが、翻訳改善を希望するボランティアの方々を歓迎します。Xcode 16（またはそれ以降のバージョン）をインストールした Mac があると、作業が大変楽になります。なお、既存の和訳にも文法的な間違いに対するご意見もよろしくお願いいたします。"
+            "value" : "当アプリの主要言語は、英語、繁体字中国語、簡体字中国語、日本語です。他の言語は補助的な言語であり、開発チームのメンバーは理解または使用できません。これらの言語には、ChatGPT で翻訳の下書きを作成していますが、翻訳改善を希望するボランティアの方々を歓迎します。Xcode 16（またはそれ以降のバージョン）をインストールした Mac があると、作業が大変楽になります。なお、既存の和訳にも文法的な間違いに対するご意見もよろしくお願いいたします。"
           }
         },
         "ko" : {
