--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -1892,7 +1892,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当端末でプロファイルを見つけませんでした。アプリ設定画面で新しいプロファイルをご追加ください。"
+            "value" : "この端末でプロファイルを見つけませんでした。アプリ設定画面で新しいプロファイルをご追加ください。"
           }
         },
         "ko" : {
@@ -2738,7 +2738,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当UIDのデータ公開設定を『HoYoLAB』 或いは 『米遊社』アプリを通じて行ってください。該当UIDの所有者である場合は、以下のスクリーンショットを参考にデータ公開設定を行ってください。"
+            "value" : "このUIDのデータ公開設定を『HoYoLAB』 或いは 『米遊社』アプリを通じて行ってください。このUIDの所有者である場合は、以下のスクリーンショットを参考にデータ公開設定を行ってください。"
           }
         },
         "ko" : {
@@ -3123,7 +3123,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "⚠︎ 該当プロファイルのUIDは米遊社在籍の場合、追加情報を表示するために、ご自分で備えたデバイス指紋のご記入が要する場合はございます。"
+            "value" : "⚠︎ このプロファイルのUIDは米遊社在籍の場合、追加情報を表示するために、ご自分で備えたデバイス指紋のご記入が要する場合はございます。"
           }
         },
         "ko" : {
@@ -4817,7 +4817,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "下記の事項をご注意してからご続行ください：\n\n→ 米遊社 ・ HoYoLAB アカウントの入会・管理・退会についての一切機能は、弊アプリのサポート対象外です。米遊社 ・ HoYoLAB アプリを使うか、あるいは MiHoYo / Cognosphere 社からの公式 Web サービスで該当事項をお行いください。この画面の右上隅にある管理リンクをタップしてから、その Web サービスページへ続行できます。\n\n→ いずれの米遊社 ・ HoYoLAB 新規アカウントは、必ず該当ゲーム（上記のご指定のゲーム）で少なくとも一回お遊びしてから、弊アプリで利用可能です。\n\n→ いずれの米遊社 ・ HoYoLAB アカウントでも、それに管理している該当ゲームのアカウントは、必ずゲーム内の設定でキャラクターショウケースの内容を公開と設定してから、弊アプリでそのショウケースの内容は見えます。"
+            "value" : "下記の事項をご注意してからご続行ください：\n\n→ 米遊社 ・ HoYoLAB アカウントの入会・管理・退会についての一切機能は、当アプリのサポート対象外です。米遊社 ・ HoYoLAB アプリを使うか、あるいは MiHoYo / Cognosphere 社からの公式 Web サービスでこの事項をお行いください。この画面の右上隅にある管理リンクをタップしてから、その Web サービスページへ続行できます。\n\n→ いずれの米遊社 ・ HoYoLAB 新規アカウントは、必ずこのゲーム（上記のご指定のゲーム）で少なくとも一回お遊びしてから、当アプリで利用可能です。\n\n→ いずれの米遊社 ・ HoYoLAB アカウントでも、それに管理しているこのゲームのアカウントは、必ずゲーム内の設定でキャラクターショウケースの内容を公開と設定してから、当アプリでそのショウケースの内容は見えます。"
           }
         },
         "ko" : {
@@ -6201,7 +6201,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "深く残念ながら、該当サーバーのログインは現時点でできません。一刻も早く使えるよう、我らは策を練っています。幸い、「米遊社・HoYoLAB」の使えるCookieデータがお持ちしている場合、ご自分でそれを書き込んでログインするのは可能です。"
+            "value" : "深く残念ながら、このサーバーのログインは現時点でできません。一刻も早く使えるよう、我らは策を練っています。幸い、「米遊社・HoYoLAB」の使えるCookieデータがお持ちしている場合、ご自分でそれを書き込んでログインするのは可能です。"
           }
         },
         "ko" : {
@@ -6278,7 +6278,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当ゲームに応ずるUIDは見つかりませんでした。該当 HoYoLAB / 米遊社アカウントは少なくとも該当ゲームを一回やったことのない限り、弊アプリで「このゲームのアカウントとして」使う意味はございません。"
+            "value" : "このゲームに応ずるUIDは見つかりませんでした。この HoYoLAB / 米遊社アカウントは少なくともこのゲームを一回やったことのない限り、当アプリで「このゲームのアカウントとして」使う意味はございません。"
           }
         },
         "ko" : {
@@ -7663,7 +7663,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "\n米遊社は、ユーザーが米遊社アカウントの退会(削除)を完了するには、スマホまたは米遊社アプリのいずれかを使用してしまえと想定しています。\n\nmacOS で米遊社アカウント削除リンクを表示するために、Safari ブラウザのユーザーエージェント(User-Agent, UA)を iPhone のUAと変更する必要でございます。macOS の Safari の開発者メニューを使用して UA を変更する方法については、Apple サポートにお問い合わせください。\n\n弊アプリで直接に上記のリンクをクリックした場合、自動的に iPhone の UA を適用します。"
+            "value" : "\n米遊社は、ユーザーが米遊社アカウントの退会(削除)を完了するには、スマホまたは米遊社アプリのいずれかを使用してしまえと想定しています。\n\nmacOS で米遊社アカウント削除リンクを表示するために、Safari ブラウザのユーザーエージェント(User-Agent, UA)を iPhone のUAと変更する必要でございます。macOS の Safari の開発者メニューを使用して UA を変更する方法については、Apple サポートにお問い合わせください。\n\n当アプリで直接に上記のリンクをクリックした場合、自動的に iPhone の UA を適用します。"
           }
         },
         "ko" : {
@@ -9116,7 +9116,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当端末の全てのプロファイルをペアリング済みのApple Watchに押し込む"
+            "value" : "この端末の全てのプロファイルをペアリング済みのApple Watchに押し込む"
           }
         },
         "ko" : {
@@ -9193,7 +9193,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Apple WatchでのiCloud経由のプロファイル同期が利用できぬ場合にのみ役立つ機能である。"
+            "value" : "Apple WatchでのiCloud経由のプロファイル同期が利用できない場合にのみ役立つ機能である。"
           }
         },
         "ko" : {
@@ -10338,7 +10338,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "敝アプリまたはその付属のウィジェットは、特定のプロファイルに対するリアルタイム便箋情報を取得する際に、そのプロファイルに関する通知を自動で再予定しようとします。該当プロファイルの新しい通知を予定するたびに、以前に（そのプロファイルのために）予定された不適切な未送信通知があれば、それらを自動的に削除しようとします。通知は、システム設定が本アプリの通知送信を許可しており、さらに本アプリがリアルタイム便箋情報の取得に成功した場合に限り、関連の通知設定が許可されている状況でのみ予定されます。"
+            "value" : "敝アプリまたはその付属のウィジェットは、特定のプロファイルに対するリアルタイム便箋情報を取得する際に、そのプロファイルに関する通知を自動で再予定しようとします。このプロファイルの新しい通知を予定するたびに、以前に（そのプロファイルのために）予定された不適切な未送信通知があれば、それらを自動的に削除しようとします。通知は、システム設定が本アプリの通知送信を許可しており、さらに本アプリがリアルタイム便箋情報の取得に成功した場合に限り、関連の通知設定が許可されている状況でのみ予定されます。"
           }
         },
         "ko" : {
@@ -12010,7 +12010,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "弊アプリは未だに通知を送るシステム権限は持っておりません。"
+            "value" : "当アプリは未だに通知を送るシステム権限は持っておりません。"
           }
         },
         "ko" : {
@@ -13684,7 +13684,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "⚠️ 開発者から技術的なサポートを求めている間に行うように指示されない限り、この切り替えボタンを触らないでください。\n\n⚠️ この切り替えボタンを触る前に、該当端末からプロファイルをお書き出しください。"
+            "value" : "⚠️ 開発者から技術的なサポートを求めている間に行うように指示されない限り、この切り替えボタンを触らないでください。\n\n⚠️ この切り替えボタンを触る前に、この端末からプロファイルをお書き出しください。"
           }
         },
         "ko" : {
@@ -14448,7 +14448,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当アカウントのこれらのゲームの全てのUIDを一気に読み込む"
+            "value" : "このアカウントのこれらのゲームの全てのUIDを一気に読み込む"
           }
         },
         "ko" : {
@@ -14988,7 +14988,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当端末で保存したプロフィールの管理"
+            "value" : "この端末で保存したプロフィールの管理"
           }
         },
         "ko" : {
@@ -15369,7 +15369,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "スタミナタイマーは、弊アプリが iOS のライブアクティビティ機能を利用する方法です。「今日」タブでいずれのプロファイルの「リアルタイム便箋」の右にある三点アイコンをクリックすると、スタミナタイマーのライブアクティビティが開始されます。"
+            "value" : "スタミナタイマーは、当アプリが iOS のライブアクティビティ機能を利用する方法です。「今日」タブでいずれのプロファイルの「リアルタイム便箋」の右にある三点アイコンをクリックすると、スタミナタイマーのライブアクティビティが開始されます。"
           }
         },
         "ko" : {
@@ -15446,7 +15446,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "システム設定に移動して、弊アプリのライブアクティビティを有効にしてください。"
+            "value" : "システム設定に移動して、当アプリのライブアクティビティを有効にしてください。"
           }
         },
         "ko" : {
@@ -15598,7 +15598,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "システムから弊アプリへ「ライブアクティビティの権限」を下されておりませんでした"
+            "value" : "システムから当アプリへ「ライブアクティビティの権限」を下されておりませんでした"
           }
         },
         "ko" : {
