--- a/Packages/PZHoYoLabKit/Sources/PZHoYoLabKit/Resources/Localizable.xcstrings
+++ b/Packages/PZHoYoLabKit/Sources/PZHoYoLabKit/Resources/Localizable.xcstrings
@@ -1734,7 +1734,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当シーズンの作戦報告はございません。"
+            "value" : "このシーズンの作戦報告はございません。"
           }
         },
         "ko" : {
