--- a/Packages/PZWidgetsKit/Sources/PZWidgetsKit/Resources/Localizable.xcstrings
+++ b/Packages/PZWidgetsKit/Sources/PZWidgetsKit/Resources/Localizable.xcstrings
@@ -197,7 +197,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "現在のシステム設定により、弊アプリのライブアクティビティ利用権限は不足である。"
+            "value" : "現在のシステム設定により、当アプリのライブアクティビティ利用権限は不足である。"
           }
         },
         "ko" : {
