--- a/WidgetExtension/Localizable.xcstrings
+++ b/WidgetExtension/Localizable.xcstrings
@@ -5743,7 +5743,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "該当ウィジェットをリロードする"
+            "value" : "このウィジェットをリロードする"
           }
         },
         "ko" : {
