PZBaseKit // i18n: Fix `sys.ok` for zh-Hans & zh-Hant.

--- a/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
+++ b/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
@@ -3689,13 +3689,13 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "嗯"
+            "value" : "OK"
           }
         },
         "zh-Hant" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "嗯"
+            "value" : "OK"
           }
         }
       }
